discussion/kv_engine/134370/134370_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Build speed [4/6]: Reduce inclusion of vbucket.h

Using ClangBuildAnalyzer highlighted that the header 'vbucket.h' is
the most expensive header to include when building
ep-engine_ep_unit_tests.

Overall time to build ep-engine_ep_unit_tests and top 5 expensive
headers:

Before:

      157.96 real      1397.12 user        81.91 sys

    119699 ms: ../kv_engine/engines/ep/src/vbucket.h (included 101 times, avg 1185 ms)
    88528 ms: tlm/deps/json.exploded/include/nlohmann/json.hpp (included 137 times, avg 646 ms)
    75024 ms: ../kv_engine/engines/ep/src/kv_bucket.h (included 67 times, avg 1119 ms)
    61643 ms: ../kv_engine/engines/ep/src/collections/vbucket_manifest.h (included 46 times, avg 1340 ms)
    61404 ms: ../kv_engine/include/memcached/dockey.h (included 209 times, avg 293 ms)

vbucket.h is both included in a large number of places, and has a high
include cost. Reduce the number of places it is included, by:

- Forward-declaring where possible.
- Moving VBNotifyCtx from vbucket.h to it's own header.

This reduces the cost of vbucket.h from 119s to 74s:

After:
      149.26 real      1422.24 user        81.96 sys

    83770 ms: tlm/deps/json.exploded/include/nlohmann/json.hpp (included 135 times, avg 620 ms)
    74002 ms: ../kv_engine/engines/ep/src/vbucket.h (included 99 times, avg 747 ms)
    70453 ms: ../kv_engine/engines/ep/src/kv_bucket.h (included 67 times, avg 1051 ms)
    59612 ms: ../kv_engine/include/memcached/engine.h (included 150 times, avg 397 ms)
    59038 ms: ../kv_engine/engines/ep/src/collections/vbucket_manifest.h (included 46 times, avg 1283 ms)

Change-Id: Ida969c866fb7b85faf5a0a263abbdc667662cd1d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2020-08-17 10:29:21.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-08-17 10:52:02.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25613/ : FAILURE

Compile error at /usr/local/lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/bits/unique_ptr.h:825:34:
error: allocation of incomplete type "Collections::VB::Manifest"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25613/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3790/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvshard.h:119:26: error: unknown type name "Vbid" [clang-diagnostic-error]
    VBucketPtr getBucket(Vbid id) const;
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvshard.h:133:46: error: unknown type name "Vbid" [clang-diagnostic-error]
    void dropVBucketAndSetupDeferredDeletion(Vbid id, const void* cookie);
                                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvshard.h:139:10: error: no template named "vector" in namespace "std" [clang-diagnostic-error]
    std::vector<Vbid> getVBucketsSortedByState();
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvshard.h:139:17: error: use of undeclared identifier "Vbid" [clang-diagnostic-error]
    std::vector<Vbid> getVBucketsSortedByState();
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvshard.h:140:10: error: no template named "vector" in namespace "std" [clang-diagnostic-error]
    std::vector<Vbid> getVBuckets();
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvshard.h:140:17: error: use of undeclared identifier "Vbid" [clang-diagnostic-error]
    std::vector<Vbid> getVBuckets();
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvshard.h:168:25: error: no type named "mutex" in namespace "std" [clang-diagnostic-error]
            Access(std::mutex& m, T e) : lock(m), element(e) {
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvshard.h:216:18: error: no template named "unique_lock" in namespace "std" [clang-diagnostic-error]
            std::unique_lock<std::mutex> lock;
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvshard.h:216:35: error: no member named "mutex" in namespace "std" [clang-diagnostic-error]
            std::unique_lock<std::mutex> lock;
                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvshard.h:229:22: error: no type named "mutex" in namespace "std" [clang-diagnostic-error]
        mutable std::mutex mutex;
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvshard.h:238:52: error: unknown type name "Vbid" [clang-diagnostic-error]
    VBMapElement::Access<VBMapElement&> getElement(Vbid id);
                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvshard.h:240:13: error: unknown type name "Vbid" [clang-diagnostic-error]
            Vbid id) const;
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvshard.h:247:10: error: no template named "vector" in namespace "std" [clang-diagnostic-error]
    std::vector<VBMapElement> vbuckets;
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3790/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvshard.h:119:26:
error: unknown type name "Vbid" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3790/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2314/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
